--- a/index.html
+++ b/index.html
@@ -2839,9 +2839,9 @@ function showUserManagement() {
     let html = `<div style="max-height:60vh;overflow:auto;">
       <h3>User Management</h3>
       <table class='table table-striped table-bordered'>
-        <tr><th>Name</th><th>Email</th><th>Role</th></tr>`;
+        <tr><th>User</th><th>Role</th></tr>`;
     Object.values(users).forEach(user => {
-      html += `<tr><td>${user.name || ''}</td><td>${user.email || ''}</td><td>${user.role || ''}</td></tr>`;
+      html += `<tr><td>${user.name ? user.name + ' ' : ''}(${user.email || ''})</td><td>${user.role || ''}</td></tr>`;
     });
     html += '</table>';
     html += `<div class='text-end mt-3'><button class='btn btn-secondary' onclick='closeModal()'>Close</button></div></div>`;
