--- a/index.html
+++ b/index.html
@@ -945,6 +945,14 @@
       }
     }
   </style>
+  <style>
+    #loginScreen.login-background {
+      background: url('cork_city_hall_night.jpg') !important;
+      background-size: cover !important;
+      background-position: center !important;
+      min-height: 100vh !important;
+    }
+  </style>
 </head>
 <body>
 <div id="map" style="width:100vw; height:100vh; min-height:400px;"></div>
