--- a/index.html
+++ b/index.html
@@ -987,6 +987,7 @@
               </span>
             </div>
             <button type="submit" class="btn btn-primary btn-lg w-100 mb-2" style="font-weight:600;font-size:1.15rem;">Sign In</button>
+            <button type="button" class="btn btn-outline-primary w-100 mt-2" onclick="showRegisterModal()">Register</button>
             <div class="text-start mt-2">
               <a href="#" id="forgotPasswordLink" style="color:#1976D2;text-decoration:underline;cursor:pointer;font-size:1rem;">Forgot password?</a>
             </div>
