--- a/index.html
+++ b/index.html
@@ -3286,6 +3286,11 @@ function showInspectionPopup(marker, gullyId, latlng, layerType) {
       html += `<input type='file' id='inspection-photo' accept='image/*' style='margin-top:5px;display:none;'/><br/>`;
       html += `<button id='take-photo-btn' type='button' style='margin:5px 0;'>📸 Take Photo</button>`;
       html += `<img id='inspection-photo-preview' style='max-width:100%;max-height:100px;display:none;margin:5px 0;'>`;
+      html += `<div id='photo-upload-progress-container' style='display:none;margin:5px 0;'>`
+      html += `<div style='width:100%;background:#eee;border-radius:4px;overflow:hidden;height:16px;'>`
+      html += `<div id='photo-upload-progress-bar' style='width:0%;height:16px;background:#2196F3;transition:width 0.2s;'></div>`
+      html += `</div>`
+      html += `<div id='photo-upload-progress-text' style='font-size:12px;text-align:center;margin-top:2px;'></div>`
       html += `</div>`;
     } else if (photoURL) {
       html += `<div class='mb-2'><label class='form-label'><b>Photo:</b></label><br/>`;
@@ -3413,7 +3418,7 @@ function showInspectionPopup(marker, gullyId, latlng, layerType) {
               const file = photoInput.files[0];
               const storageRef = storage.ref(`inspections/${gullyId}/${Date.now()}_${file.name}`);
               const uploadPromise = storageRef.put(file);
-              const timeoutPromise = new Promise((_, reject) => setTimeout(() => reject(new Error('Photo upload timed out after 30 seconds')), 30000));
+              const timeoutPromise = new Promise((_, reject) => setTimeout(() => reject(new Error('Photo upload timed out after 2 minutes')), 120000));
               await Promise.race([uploadPromise, timeoutPromise]);
               newPhotoURL = await storageRef.getDownloadURL();
             }
