--- a/index.html
+++ b/index.html
@@ -952,6 +952,10 @@
       background-position: center !important;
       min-height: 100vh !important;
     }
+    /* Hide Show Layers button when login screen is visible */
+    #loginScreen.login-background ~ .toggle-layers {
+      display: none !important;
+    }
   </style>
 </head>
 <body>
