--- a/index.html
+++ b/index.html
@@ -962,26 +962,26 @@
     @media (min-width: 900px) {
       .bottom-toolbar, .toolbar-content, .button-group {
         flex-wrap: nowrap !important;
-        overflow-x: auto !important;
-        white-space: nowrap !important;
+        overflow-x: visible !important;
+        white-space: normal !important;
       }
       .toolbar-content {
         display: flex !important;
         flex-direction: row !important;
         align-items: center !important;
-        justify-content: flex-start !important;
-        gap: 0 !important;
+        justify-content: center !important;
+        gap: 12px !important;
       }
       .button-group {
         display: flex !important;
         flex-direction: row !important;
         align-items: center !important;
-        gap: 0 !important;
+        gap: 12px !important;
       }
       .toolbar-button, .button-group > button, .toolbar-content > button {
         margin: 0 !important;
-        border-radius: 0 !important;
-        border-right: 1px solid #ddd !important;
+        border-radius: 4px !important;
+        border-right: none !important;
       }
       .toolbar-button:last-child, .button-group > button:last-child, .toolbar-content > button:last-child {
         border-right: none !important;
